Archive2/43/f91d740574931d/output
main.cpp:8:9: error: 'int Base<T>::data() const [with T = Params]' is inaccessible
     int data() const { return 42; }
         ^
main.cpp:16:8: error: within this context
 struct Final : public Middle<Base,Params>
        ^
